Style header's text and fix buttons overlapping text

--- a/src/components/LinkButton.css
+++ b/src/components/LinkButton.css
@@ -1,4 +1,5 @@
 .link-btn {
+	display: inline-block;
 	padding: 1rem 2rem;
 
 	border-bottom-style: solid;
